--- a/resources/views/layouts/app.edge
+++ b/resources/views/layouts/app.edge
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    @entryPointStyles('app')
+    <link rel="stylesheet" href="/assets/css/app.css">
     @!section('style')
 </head>
 <body>
-    @entryPointScripts('app')
+    <script src="/assets/css/app.js"></script>
     @!section('body')
 </body>
 </html>
