[ADD] preparing for auth and primary cover module

--- a/resources/views/layouts/admin.edge
+++ b/resources/views/layouts/admin.edge
@@ -36,7 +36,7 @@
                             iconMenu: 'fas fa-tachometer-alt'
                         })
                         @!component('partials/dashboard-menu', {
-                            url: route('primary_cover.index'),
+                            url: route('admin.primary_cover.index'),
                             text: 'Primary Cover',
                             iconMenu: 'fas fa-th'
                         })
