[UPDATE] login page

--- a/resources/views/auth/login.edge
+++ b/resources/views/auth/login.edge
@@ -10,28 +10,24 @@
     <div class="login-box">
         <div class="card card-outline card-primary">
             <div class="card-header text-center">
-                <a href="{{ route('login') }}" class="h1">Admin {{ process.env.APP_NAME }}</a>
+                <a href="{{ route('admin.login.index') }}" class="h1">
+                    Admin {{ process.env.APP_NAME }}
+                </a>
             </div>
             <div class="card-body">
-                <p class="login-box-msg">Sign in to start your session</p>
-
-                <form action="{{ route('login.store') }}" method="post">
-                    <div class="input-group mb-3">
-                        <input type="email" class="form-control" placeholder="Email">
-                        <div class="input-group-append">
-                            <div class="input-group-text">
-                                <span class="fas fa-envelope"></span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="input-group mb-3">
-                        <input type="password" class="form-control" placeholder="Password">
-                        <div class="input-group-append">
-                            <div class="input-group-text">
-                                <span class="fas fa-lock"></span>
-                            </div>
-                        </div>
-                    </div>
+                <form action="{{ route('admin.login.store') }}" method="post">
+                    @!component('partials/bootstrap-input', {
+                        type: 'email',
+                        name: 'email',
+                        prepandIcon: 'fas fa-envelope',
+                        placeholder: 'Email'
+                    })
+                    @!component('partials/bootstrap-input', {
+                        type: 'password',
+                        name: 'password',
+                        prepandIcon: 'fas fa-lock',
+                        placeholder: 'Password'
+                    })
                     <div class="row">
                         <div class="col-8">
                             <div class="icheck-primary">
