--- a/resources/views/partials/meta.edge
+++ b/resources/views/partials/meta.edge
@@ -1,4 +1,4 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>{{ process.env.APP_NAME }} - {{ title }}</title>
+<title>{{ process.env.APP_NAME }} - {{ titlePage }}</title>
