--- a/resources/views/auth/login.edge
+++ b/resources/views/auth/login.edge
@@ -8,6 +8,13 @@
 
 <body class="hold-transition login-page">
     <div class="login-box">
+        @if(flashMessages.has('notification'))
+        <div class="alert alert-danger" role="alert">
+            @each(notif in flashMessages.get('notification'))
+            {{ notif  }}
+            @endeach
+        </div>
+        @end
         <div class="card card-outline card-primary">
             <div class="card-header text-center">
                 <a href="{{ route('admin.login.index') }}" class="h1">
@@ -16,26 +23,28 @@
             </div>
             <div class="card-body">
                 <form action="{{ route('admin.login.store') }}" method="post">
+                    {{ csrfField() }}
                     @!component('partials/bootstrap-input', {
                         type: 'email',
                         name: 'email',
                         prepandIcon: 'fas fa-envelope',
-                        placeholder: 'Email'
+                        placeholder: 'Email',
+                        autocomplete: 'username'
                     })
                     @!component('partials/bootstrap-input', {
                         type: 'password',
                         name: 'password',
                         prepandIcon: 'fas fa-lock',
-                        placeholder: 'Password'
+                        placeholder: 'Password',
+                        autocomplete: 'current-password'
                     })
                     <div class="row">
                         <div class="col-8">
-                            <div class="icheck-primary">
-                                <input type="checkbox" id="remember">
-                                <label for="remember">
-                                    Remember Me
-                                </label>
-                            </div>
+                            @!component('partials/bootstrap-input', {
+                                type: 'checkbox',
+                                name: 'remember',
+                                label: 'Remember Me',
+                            })
                         </div>
                         <div class="col-4">
                             <button type="submit" class="btn btn-primary btn-block">Sign In</button>
@@ -48,7 +57,9 @@
             </div>
         </div>
     </div>
-    <script src="/assets/js/admin.js"></script>
+    <script src="/assets/adminlte/plugins/jquery/jquery.min.js"></script>
+    <script src="/assets/adminlte/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/assets/adminlte/dist/js/adminlte.js"></script>
 </body>
 
 </html>
