--- a/resources/views/layouts/admin.edge
+++ b/resources/views/layouts/admin.edge
@@ -30,19 +30,19 @@
                     })
                     @component('partials/dashboard-menu', {
                         url: '#',
-                        text: 'UI Elements',
+                        text: 'About Us',
                         iconMenu: 'fas fa-tree',
                         iconTextClass: 'fas fa-angle-left right'
                     })
                         <ul class="nav nav-treeview">
                             @!component('partials/dashboard-menu', {
-                                url: 'general',
-                                text: 'General',
+                                url: route('about_us.vision_mission'),
+                                text: 'Visi Misi',
                                 iconMenu: 'far fa-circle nav-icon'
                             })
                             @!component('partials/dashboard-menu', {
                                 url: 'icons',
-                                text: 'Icons',
+                                text: 'Social Media',
                                 iconMenu: 'far fa-circle nav-icon'
                             })
                         </ul>
@@ -89,6 +89,8 @@
         </div>
         @include('partials/footer')
     </div>
+
+    @!section('component')
 
     @include('partials/admin-script')
 
