[UPDATE] app name

--- a/resources/views/welcome.edge
+++ b/resources/views/welcome.edge
@@ -84,7 +84,7 @@
 @section('body')
 <main class="bg-black-80">
     <div>
-        <h1 class="title"> It Works! {{ appName }}</h1>
+        <h1 class="title"> It Works! {{ process.env.APP_NAME }}</h1>
         <p class="subtitle">
             Congratulations, you have just created your first AdonisJS app.
         </p>
