[ADD] create and read social media

--- a/resources/views/layouts/admin.edge
+++ b/resources/views/layouts/admin.edge
@@ -41,7 +41,7 @@
                                 iconMenu: 'far fa-circle nav-icon'
                             })
                             @!component('partials/dashboard-menu', {
-                                url: 'icons',
+                                url: route('contact_us.manage'),
                                 text: 'Social Media',
                                 iconMenu: 'far fa-circle nav-icon'
                             })
