--- a/resources/views/partials/admin-script.edge
+++ b/resources/views/partials/admin-script.edge
@@ -15,7 +15,6 @@
 <script src="/assets/vendors/AdminLTE/dist/js/adminlte.min.js"></script>
 <script src="/assets/vendors/dropzone/dropzone.min.js"></script>
 <script src="/assets/vendors/AdminLTE/plugins/toastr/toastr.min.js"></script>
+<script src="/assets/vendors/AdminLTE/plugins/select2/js/select2.full.min.js"></script>
 <script src="/assets/js/admin.js"></script>
-<script>
-    
-</script>
+@!section('script')
