--- a/resources/views/partials/bootstrap-input.edge
+++ b/resources/views/partials/bootstrap-input.edge
@@ -1,5 +1,8 @@
 <div class="form-group">
     @if(prepandIcon)
+        @if(label)
+        <label for="{{ dashCase(name) }}">{{ label }}</label>
+        @endif
         <div class="input-group">
             <div class="input-group-prepend">
                 <div class="input-group-text">
@@ -7,7 +10,7 @@
                 </div>
             </div>
             <input type="{{ type }}" name="{{ name }}" 
-            id="{{ dashCase(name) }}" class="form-control"
+            id="{{ dashCase(name) }}" class="form-control {{ addClass ?? ''}}"
             {{ $props.serializeExcept(['name', 'type', 'class']) }}>
         </div>
     @else
@@ -25,11 +28,22 @@
                 <textarea class="form-control" id="{{ dashCase(name) }}" 
                 name="{{ name }}" rows="{{ rows || '3' }}" 
                 {{ $props.serializeExcept(['name', 'class', 'rows']) }}></textarea>
+            @elseif(type == 'select')
+            <select class="form-control select2bs4" name="{{ name }}" style="width: 100%;">
+                @each((data, key) in datum)
+                    <option value="{{ data.val }}">{{ data.text }}</option>
+                @endeach
+            </select>
             @else
                 <input type="{{ type || 'text' }}" name="{{ name }}" 
-                class="form-control" id="{{ dashCase(name) }}"
+                class="form-control {{ addClass ?? ''}}" id="{{ dashCase(name) }}"
                 {{ $props.serializeExcept(['name', 'type', 'class']) }}>
             @end
         @end
     @end
+    @if(helperText)
+    <small id="{{ dashCase(name) }}Help" class="form-text text-muted">
+        {{ helperText }}
+    </small>
+    @endif
 </div>
