--- a/resources/views/partials/bootstrap-modal.edge
+++ b/resources/views/partials/bootstrap-modal.edge
@@ -1,4 +1,4 @@
-<div class="modal fade" id="modal-{{ id }}">
+<div class="modal fade" id="{{ 'modal-' + id }}">
     @if(!title)
         <div class="p-4">
             @set('classIcon', 'text-white')
