--- a/resources/views/layouts/admin.edge
+++ b/resources/views/layouts/admin.edge
@@ -42,7 +42,7 @@
                             })
                             @!component('partials/dashboard-menu', {
                                 url: route('contact_us.manage'),
-                                text: 'Social Media',
+                                text: 'Our Contact',
                                 iconMenu: 'far fa-circle nav-icon'
                             })
                         </ul>
@@ -91,8 +91,27 @@
     </div>
 
     @!section('component')
-
-    @include('partials/admin-script')
+    
+    <script src="/assets/vendors/AdminLTE/plugins/jquery/jquery.min.js"></script>
+    <script src="/assets/vendors/AdminLTE/plugins/jquery-ui/jquery-ui.min.js"></script>
+    <script src="/assets/vendors/AdminLTE/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/assets/vendors/AdminLTE/plugins/chart.js/Chart.min.js"></script>
+    <script src="/assets/vendors/AdminLTE/plugins/sparklines/sparkline.js"></script>
+    <script src="/assets/vendors/AdminLTE/plugins/jqvmap/jquery.vmap.min.js"></script>
+    <script src="/assets/vendors/AdminLTE/plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
+    <script src="/assets/vendors/AdminLTE/plugins/jquery-knob/jquery.knob.min.js"></script>
+    <script src="/assets/vendors/AdminLTE/plugins/moment/moment.min.js"></script>
+    <script src="/assets/vendors/AdminLTE/plugins/daterangepicker/daterangepicker.js"></script>
+    <script src="/assets/vendors/AdminLTE/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
+    <script src="/assets/vendors/AdminLTE/plugins/summernote/summernote-bs4.min.js"></script>
+    <script src="/assets/vendors/AdminLTE/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
+    <script src="/assets/vendors/AdminLTE/plugins/bs-custom-file-input/bs-custom-file-input.min.js"></script>
+    <script src="/assets/vendors/AdminLTE/dist/js/adminlte.min.js"></script>
+    <script src="/assets/vendors/dropzone/dropzone.min.js"></script>
+    <script src="/assets/vendors/AdminLTE/plugins/toastr/toastr.min.js"></script>
+    <script src="/assets/vendors/AdminLTE/plugins/select2/js/select2.full.min.js"></script>
+    <script src="/assets/js/admin.js"></script>
+    @!section('scripts')
 
 </body>
 
