--- a/resources/views/partials/close-btn.edge
+++ b/resources/views/partials/close-btn.edge
@@ -1,3 +1,3 @@
 <button type="button" class="close btn" data-dismiss="modal" aria-label="Close">
-    <i class="fas fa-times  {{ classIcon || '' }}"></i>
+    <i class="fas fa-times"></i>
 </button>
