[ADD] update contact email and phone

--- a/resources/views/about-us/address/edit.edge
+++ b/resources/views/about-us/address/edit.edge
@@ -7,7 +7,8 @@
             name: 'address',
             label: 'Alamat',
             placeholder: 'Masukan alamat lengkap disini',
-            value: ourContact.address
+            value: ourContact.address,
+            required: 'required'
         })
         @component('partials/bootstrap-input', {
             label: 'Embed google maps',
