--- a/resources/views/partials/admin-css.edge
+++ b/resources/views/partials/admin-css.edge
@@ -3,3 +3,4 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 <link rel="stylesheet" 
 href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+<link rel="stylesheet" href="/assets/vendors/fancybox/jquery.fancybox.min.css">
