--- a/resources/assets/custom-admin.css
+++ b/resources/assets/custom-admin.css
@@ -37,3 +37,19 @@
 .modal--bg-black .modal-content, .modal--bg-black .modal-body {
     background-color: black;
 }
+
+.icon-play-fancybox {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 2.5rem;
+}
+
+.right-0 {
+    right: 0;
+}
+.bottom-right-0 {
+    right: 0;
+    bottom: 0;
+}
